fixed alignment and size of bottombar

--- a/src/App.css
+++ b/src/App.css
@@ -350,10 +350,11 @@ form {
 
 .bottomBar {
   width : 100vw;
-  height: 10vh;
+  height: 12.5%;
   display : flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-flex-end;
 }
 
 .camHeader {
